generated/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> statement
Rule 2     programme -> statement ; programme
Rule 3     statement -> assignation
Rule 4     statement -> structure
Rule 5     statement -> PRINT expression
Rule 6     structure -> WHILE expression { programme }
Rule 7     expression -> expression ADD_OP expression
Rule 8     expression -> expression MUL_OP expression
Rule 9     expression -> NUMBER_INT
Rule 10    expression -> NUMBER_FLOAT
Rule 11    expression -> IDENTIFIER
Rule 12    expression -> ( expression )
Rule 13    expression -> ADD_OP expression
Rule 14    assignation -> IDENTIFIER = expression
Rule 15    structure -> FLOAT IDENTIFIER
Rule 16    structure -> INT IDENTIFIER

Terminals, with rules where they appear

(                    : 12
)                    : 12
;                    : 2
=                    : 14
ADD_OP               : 7 13
FLOAT                : 15
IDENTIFIER           : 11 14 15 16
INT                  : 16
MUL_OP               : 8
NUMBER_FLOAT         : 10
NUMBER_INT           : 9
PRINT                : 5
WHILE                : 6
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignation          : 3
expression           : 5 6 7 7 8 8 12 13 14
programme            : 2 6 0
statement            : 1 2
structure            : 4

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (15) structure -> . FLOAT IDENTIFIER
    (16) structure -> . INT IDENTIFIER

    PRINT           shift and go to state 4
    IDENTIFIER      shift and go to state 7
    WHILE           shift and go to state 3
    FLOAT           shift and go to state 5
    INT             shift and go to state 9

    programme                      shift and go to state 1
    assignation                    shift and go to state 2
    statement                      shift and go to state 8
    structure                      shift and go to state 6

state 1

    (0) S' -> programme .



state 2

    (3) statement -> assignation .

    ;               reduce using rule 3 (statement -> assignation .)
    $end            reduce using rule 3 (statement -> assignation .)
    }               reduce using rule 3 (statement -> assignation .)


state 3

    (6) structure -> WHILE . expression { programme }
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 11

state 4

    (5) statement -> PRINT . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 16

state 5

    (15) structure -> FLOAT . IDENTIFIER

    IDENTIFIER      shift and go to state 17


state 6

    (4) statement -> structure .

    ;               reduce using rule 4 (statement -> structure .)
    $end            reduce using rule 4 (statement -> structure .)
    }               reduce using rule 4 (statement -> structure .)


state 7

    (14) assignation -> IDENTIFIER . = expression

    =               shift and go to state 18


state 8

    (1) programme -> statement .
    (2) programme -> statement . ; programme

    $end            reduce using rule 1 (programme -> statement .)
    }               reduce using rule 1 (programme -> statement .)
    ;               shift and go to state 19


state 9

    (16) structure -> INT . IDENTIFIER

    IDENTIFIER      shift and go to state 20


state 10

    (13) expression -> ADD_OP . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 21

state 11

    (6) structure -> WHILE expression . { programme }
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    {               shift and go to state 23
    ADD_OP          shift and go to state 22
    MUL_OP          shift and go to state 24


state 12

    (12) expression -> ( . expression )
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 25

state 13

    (9) expression -> NUMBER_INT .

    ADD_OP          reduce using rule 9 (expression -> NUMBER_INT .)
    MUL_OP          reduce using rule 9 (expression -> NUMBER_INT .)
    {               reduce using rule 9 (expression -> NUMBER_INT .)
    ;               reduce using rule 9 (expression -> NUMBER_INT .)
    $end            reduce using rule 9 (expression -> NUMBER_INT .)
    }               reduce using rule 9 (expression -> NUMBER_INT .)
    )               reduce using rule 9 (expression -> NUMBER_INT .)


state 14

    (11) expression -> IDENTIFIER .

    ADD_OP          reduce using rule 11 (expression -> IDENTIFIER .)
    MUL_OP          reduce using rule 11 (expression -> IDENTIFIER .)
    {               reduce using rule 11 (expression -> IDENTIFIER .)
    ;               reduce using rule 11 (expression -> IDENTIFIER .)
    $end            reduce using rule 11 (expression -> IDENTIFIER .)
    }               reduce using rule 11 (expression -> IDENTIFIER .)
    )               reduce using rule 11 (expression -> IDENTIFIER .)


state 15

    (10) expression -> NUMBER_FLOAT .

    ADD_OP          reduce using rule 10 (expression -> NUMBER_FLOAT .)
    MUL_OP          reduce using rule 10 (expression -> NUMBER_FLOAT .)
    {               reduce using rule 10 (expression -> NUMBER_FLOAT .)
    ;               reduce using rule 10 (expression -> NUMBER_FLOAT .)
    $end            reduce using rule 10 (expression -> NUMBER_FLOAT .)
    }               reduce using rule 10 (expression -> NUMBER_FLOAT .)
    )               reduce using rule 10 (expression -> NUMBER_FLOAT .)


state 16

    (5) statement -> PRINT expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ;               reduce using rule 5 (statement -> PRINT expression .)
    $end            reduce using rule 5 (statement -> PRINT expression .)
    }               reduce using rule 5 (statement -> PRINT expression .)
    ADD_OP          shift and go to state 22
    MUL_OP          shift and go to state 24


state 17

    (15) structure -> FLOAT IDENTIFIER .

    ;               reduce using rule 15 (structure -> FLOAT IDENTIFIER .)
    }               reduce using rule 15 (structure -> FLOAT IDENTIFIER .)
    $end            reduce using rule 15 (structure -> FLOAT IDENTIFIER .)


state 18

    (14) assignation -> IDENTIFIER = . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 26

state 19

    (2) programme -> statement ; . programme
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (15) structure -> . FLOAT IDENTIFIER
    (16) structure -> . INT IDENTIFIER

    PRINT           shift and go to state 4
    IDENTIFIER      shift and go to state 7
    WHILE           shift and go to state 3
    FLOAT           shift and go to state 5
    INT             shift and go to state 9

    programme                      shift and go to state 27
    assignation                    shift and go to state 2
    statement                      shift and go to state 8
    structure                      shift and go to state 6

state 20

    (16) structure -> INT IDENTIFIER .

    ;               reduce using rule 16 (structure -> INT IDENTIFIER .)
    }               reduce using rule 16 (structure -> INT IDENTIFIER .)
    $end            reduce using rule 16 (structure -> INT IDENTIFIER .)


state 21

    (13) expression -> ADD_OP expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 13 (expression -> ADD_OP expression .)
    MUL_OP          reduce using rule 13 (expression -> ADD_OP expression .)
    {               reduce using rule 13 (expression -> ADD_OP expression .)
    ;               reduce using rule 13 (expression -> ADD_OP expression .)
    $end            reduce using rule 13 (expression -> ADD_OP expression .)
    }               reduce using rule 13 (expression -> ADD_OP expression .)
    )               reduce using rule 13 (expression -> ADD_OP expression .)

  ! ADD_OP          [ shift and go to state 22 ]
  ! MUL_OP          [ shift and go to state 24 ]


state 22

    (7) expression -> expression ADD_OP . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 28

state 23

    (6) structure -> WHILE expression { . programme }
    (1) programme -> . statement
    (2) programme -> . statement ; programme
    (3) statement -> . assignation
    (4) statement -> . structure
    (5) statement -> . PRINT expression
    (14) assignation -> . IDENTIFIER = expression
    (6) structure -> . WHILE expression { programme }
    (15) structure -> . FLOAT IDENTIFIER
    (16) structure -> . INT IDENTIFIER

    PRINT           shift and go to state 4
    IDENTIFIER      shift and go to state 7
    WHILE           shift and go to state 3
    FLOAT           shift and go to state 5
    INT             shift and go to state 9

    programme                      shift and go to state 29
    assignation                    shift and go to state 2
    statement                      shift and go to state 8
    structure                      shift and go to state 6

state 24

    (8) expression -> expression MUL_OP . expression
    (7) expression -> . expression ADD_OP expression
    (8) expression -> . expression MUL_OP expression
    (9) expression -> . NUMBER_INT
    (10) expression -> . NUMBER_FLOAT
    (11) expression -> . IDENTIFIER
    (12) expression -> . ( expression )
    (13) expression -> . ADD_OP expression

    NUMBER_INT      shift and go to state 13
    NUMBER_FLOAT    shift and go to state 15
    IDENTIFIER      shift and go to state 14
    (               shift and go to state 12
    ADD_OP          shift and go to state 10

    expression                     shift and go to state 30

state 25

    (12) expression -> ( expression . )
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    )               shift and go to state 31
    ADD_OP          shift and go to state 22
    MUL_OP          shift and go to state 24


state 26

    (14) assignation -> IDENTIFIER = expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ;               reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    $end            reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    }               reduce using rule 14 (assignation -> IDENTIFIER = expression .)
    ADD_OP          shift and go to state 22
    MUL_OP          shift and go to state 24


state 27

    (2) programme -> statement ; programme .

    $end            reduce using rule 2 (programme -> statement ; programme .)
    }               reduce using rule 2 (programme -> statement ; programme .)


state 28

    (7) expression -> expression ADD_OP expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 7 (expression -> expression ADD_OP expression .)
    {               reduce using rule 7 (expression -> expression ADD_OP expression .)
    ;               reduce using rule 7 (expression -> expression ADD_OP expression .)
    $end            reduce using rule 7 (expression -> expression ADD_OP expression .)
    }               reduce using rule 7 (expression -> expression ADD_OP expression .)
    )               reduce using rule 7 (expression -> expression ADD_OP expression .)
    MUL_OP          shift and go to state 24

  ! MUL_OP          [ reduce using rule 7 (expression -> expression ADD_OP expression .) ]
  ! ADD_OP          [ shift and go to state 22 ]


state 29

    (6) structure -> WHILE expression { programme . }

    }               shift and go to state 32


state 30

    (8) expression -> expression MUL_OP expression .
    (7) expression -> expression . ADD_OP expression
    (8) expression -> expression . MUL_OP expression

    ADD_OP          reduce using rule 8 (expression -> expression MUL_OP expression .)
    MUL_OP          reduce using rule 8 (expression -> expression MUL_OP expression .)
    {               reduce using rule 8 (expression -> expression MUL_OP expression .)
    ;               reduce using rule 8 (expression -> expression MUL_OP expression .)
    $end            reduce using rule 8 (expression -> expression MUL_OP expression .)
    }               reduce using rule 8 (expression -> expression MUL_OP expression .)
    )               reduce using rule 8 (expression -> expression MUL_OP expression .)

  ! ADD_OP          [ shift and go to state 22 ]
  ! MUL_OP          [ shift and go to state 24 ]


state 31

    (12) expression -> ( expression ) .

    ADD_OP          reduce using rule 12 (expression -> ( expression ) .)
    MUL_OP          reduce using rule 12 (expression -> ( expression ) .)
    {               reduce using rule 12 (expression -> ( expression ) .)
    ;               reduce using rule 12 (expression -> ( expression ) .)
    $end            reduce using rule 12 (expression -> ( expression ) .)
    }               reduce using rule 12 (expression -> ( expression ) .)
    )               reduce using rule 12 (expression -> ( expression ) .)


state 32

    (6) structure -> WHILE expression { programme } .

    ;               reduce using rule 6 (structure -> WHILE expression { programme } .)
    }               reduce using rule 6 (structure -> WHILE expression { programme } .)
    $end            reduce using rule 6 (structure -> WHILE expression { programme } .)

